fixed long texts overflowing bug

--- a/src/sass/chat_interface.scss
+++ b/src/sass/chat_interface.scss
@@ -34,6 +34,8 @@
       }
       .copy-link {
         font-weight: 500;
+        font-size: 0.9rem;
+        align-items: center;
         display: flex;
         gap: $spacer;
         cursor: pointer;
