--- a/src/sass/member_message.scss
+++ b/src/sass/member_message.scss
@@ -3,16 +3,10 @@
 .member-message {
   @include grid(
     $row: repeat(2, auto),
-    $column: repeat(2, auto) 1fr,
+    $column: auto 1fr,
     $gap: $spacer * 0.5 $spacer
   ) {
-    grid-template-areas: 'img name date' 'img message message';
-
-    @media (max-width: 375px) {
-      grid-template-rows: repeat(3, auto);
-      grid-template-columns: repeat(2, auto);
-      grid-template-areas: 'img name' 'img date' 'img message';
-    }
+    grid-template-areas: 'img header' 'img message';
   }
   margin-bottom: $spacer * 2;
   align-items: start;
@@ -22,18 +16,27 @@
     width: 45px;
     border-radius: 7px;
   }
-  .name {
-    grid-area: name;
-    text-transform: capitalize;
-    color: $font-gray-200;
-    font-weight: 700;
-  }
-  .date {
-    grid-area: date;
-    color: $font-gray-200;
-    font-size: 0.95rem;
+  .header {
+    grid-area: header;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+
+    .name {
+      text-transform: capitalize;
+      color: $font-gray-200;
+      font-weight: 700;
+      margin: 0;
+      margin-right: $spacer;
+    }
+    .date {
+      color: $font-gray-200;
+      font-size: 0.95rem;
+    }
   }
   .message {
     grid-area: message;
+    overflow: hidden;
+    overflow-wrap: break-word;
   }
 }
